src/styles/blocks/top-bar.scss
.top-bar {
  padding-block: 25px;

  display: flex;
  justify-content: space-between;
  align-items: center;

  &__phone-wrapper {
    position: relative;

    &:hover .contacts--align-right {
      opacity: 1;
    }
  }

  @include onTablet {
    padding-block: 50px;
  }

  &__logo-link {
    display: flex;
  }

  &__logo {
    width: 64px;
    height: 46px;
    @include hover(transform, scale(1.3));

    @include onTablet {
      width: 87px;
      height: 65px;
    }
  }

  &__icons {
    display: flex;
    gap: 24px;

    @include onTablet {
      gap: 55px;
    }
  }
}

